apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_get_meeting__outcome_ok.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 308
expression: value
---
{
  "data": {
    "action_items": [
      {
        "due": "2026-05-15",
        "id": "11111111-1111-7111-8111-111111111111",
        "owner": "Alex",
        "text": "Send the recap email"
      },
      {
        "due": null,
        "id": "22222222-2222-7222-8222-222222222222",
        "owner": null,
        "text": "Decide on launch date"
      }
    ],
    "calendar_event_id": "cal-event-abc-123",
    "duration_secs": 1800,
    "ended_at": "2026-05-01T14:30:00Z",
    "id": "mtg_00000000-0000-0000-0000-000000000000",
    "participants": [
      {
        "display_name": "me",
        "identifier_kind": "mic",
        "is_user": true
      },
      {
        "display_name": "Alice",
        "identifier_kind": "ax_tree",
        "is_user": false
      }
    ],
    "platform": "zoom",
    "processing": {
      "model": "claude-sonnet-4-6",
      "summary_usd": 0.0125,
      "tokens_in": 4200,
      "tokens_out": 350
    },
    "started_at": "2026-05-01T14:00:00Z",
    "status": "done",
    "summary_status": "ready",
    "tags": [
      "weekly-sync",
      "engineering"
    ],
    "title": "Weekly Team Sync",
    "transcript_status": "complete"
  },
  "kind": "ok"
}
