apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_get_meeting__outcome_unavailable.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 320
expression: value
---
{
  "detail": "connect refused",
  "kind": "unavailable"
}
